demo-code/kubernetes/manifests/kube-explorer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-explorer
  namespace: kube-system
  labels:
    app: kube-explorer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-explorer
  template:
    metadata:
      namespace: kube-system
      labels:
        app: kube-explorer
    spec:
      serviceAccountName: kube-explorer
      containers:
      - image: cnrancher/kube-explorer:v0.5.0-rc4
        imagePullPolicy: IfNotPresent
        name: kube-explorer
        ports:
        - containerPort: 8989
          protocol: TCP
        args:
        - "--https-listen-port=0"
        - "--http-listen-port=8989"
---
apiVersion: v1
kind: Service
metadata:
  name: kube-explorer
  namespace: kube-system
  labels:
    app: kube-explorer
spec:
  ports:
  - port: 8989
    targetPort: 8989
    protocol: TCP
    name: http
  selector:
    app: kube-explorer
---
# Note: please replace the host first
# To use sslip.io.io: https://sslip.io.io/
# To get your public IP: curl ipinfo.io/ip

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-explorer
  namespace: kube-system
  labels:
    app: kube-explorer
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-kube-explorer@kubernetescrd
spec:
  rules:
  - host: "192.168.32.177.sslip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-explorer
            port:
              number: 8989
---
# The definitions below require the definitions for the Middleware and IngressRoute kinds.
# https://doc.traefik.io/traefik/reference/dynamic-configuration/kubernetes-crd/#definitions
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: kube-explorer
  namespace: kube-system
  labels:
    app: kube-explorer
spec:
  basicAuth:
    secret: kube-explorer
    removeHeader: true
